# PanClaw

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-build.txt
.github/workflows/: ci.yml  release-packages.yml
docs/: ADAPTER_POLICY.md  ARCHITECTURE.md  CORE_INTEGRATIONS.md  OFFICIAL_CHANNELS.md  PACKAGING.md  SKILL_MATRIX.md  UPSTREAMS.md
examples/: run_skill.json
mobile/android/: README.md  settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/ai/active/panclaw/: MainActivity.java
mobile/android/app/src/main/res/values/: styles.xml
mobile/ios/: README.md
packaging/: targets.json
packaging/installers/: install.ps1  install.sh
registry/: openclaw-panclaw.json
scripts/: build_artifacts.py  build_ios_unsigned.py  check_release_matrix.py  pyinstaller_entry.py  smoke_artifacts.py
src/panclaw/: __init__.py  catalog.py  channels.py  cli.py  contracts.py  integrations.py  registry.py  router.py  server.py
src/panclaw/adapters/: __init__.py  automation.py  base.py  cloud_iac.py  finance_life.py  health_learning.py  image_media.py  messaging.py  news_culture_aec.py  office_pdf.py  openclaw_weixin.py
tests/: test_channels.py  test_registry.py
