[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "panclaw"
version = "0.4.1"
description = "PanClaw: OpenClaw + Hermes-style agent orchestration with audited skill adapters."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ActiveInAI" }
]
dependencies = []

[project.scripts]
panclaw = "panclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/panclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
